--- a/visual-studio-code/visual-studio-code.dtx
+++ b/visual-studio-code/visual-studio-code.dtx
@@ -441,6 +441,21 @@ services:
       dockerfile: Dockerfile
     volumes:
     - ../..:/workspaces:cached
+    network_mode: service:db
+    command: sleep infinity
+
+  db:
+    image: postgres:latest
+    restart: unless-stopped
+    volumes:
+    - postgres-data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
+
+volumes:
+  postgres-data:
 
 % \end{yamlcode}
 % \iffalse
