--- a/visual-studio-code/visual-studio-code.dtx
+++ b/visual-studio-code/visual-studio-code.dtx
@@ -500,9 +500,12 @@ RUN python -m pip install -r requirements.txt
 %<*requirements.txt>
 % \fi
 % \begin{yamlcode}
+ipython
 pandas
 plotly
 pyyaml
+scipy
+scikit-learn
 
 % \end{yamlcode}
 % \iffalse
