--- a/visual-studio-code/visual-studio-code.dtx
+++ b/visual-studio-code/visual-studio-code.dtx
@@ -500,7 +500,8 @@ RUN python -m pip install -r requirements.txt
 %<*requirements.txt>
 % \fi
 % \begin{yamlcode}
-ipython
+% ipython
+notebook
 pandas
 plotly
 pyyaml
