--- a/visual-studio-code/visual-studio-code.dtx
+++ b/visual-studio-code/visual-studio-code.dtx
@@ -375,7 +375,7 @@
 % \end{myitemize}
 %
 % \begin{jsoncode}
-  "python.analysis.autoImportCompletions": true,
+  // "python.analysis.autoImportCompletions": true,
 % \end{jsoncode}
 % ^^A ]]] End of subsubsection `python.analysis.autoImportCompletions'.
 %
